testData/inspections/referenceResolve/referenceDoesntExist.adoc

<<<error descr="Anchor doesn't resolve">doesntexist</error>>>
